--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -37,8 +37,8 @@
         </ul>
       </nav>
       <div class="user-menu" id="userMenu">
-        <a href="/login.html" class="btn btn-outline">Sign In</a>
-        <a href="/signup.html" class="btn btn-primary">Create Account</a>
+        <a href="./login.html" class="btn btn-outline">Sign In</a>
+        <a href="./signup.html" class="btn btn-primary">Create Account</a>
       </div>
     </div>
   </div>
@@ -60,7 +60,7 @@
       document.getElementById('logoutBtn').addEventListener('click', (e) => {
         e.preventDefault();
         localStorage.removeItem('userEmail');
-        window.location.href = '/login.html';
+        window.location.href = './login.html';
       });
     }
   }
@@ -367,7 +367,7 @@
             
             <div class="saved-list">
               <p>Sign in to view your saved hospitals and preferences.</p>
-              <a href="login.html" class="btn btn-outline" style="width: 100%; margin-top: 10px;">Sign In</a>
+              <a href="./login.html" class="btn btn-outline" style="width: 100%; margin-top: 10px;">Sign In</a>
             </div>
           </div>
         </div>
