--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -25,7 +25,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="#">Find Hospitals</a></li>
             <li><a href="#">Cost Calculator</a></li>
             <li><a href="#">Resources</a></li>
@@ -33,7 +33,7 @@
         </nav>
         <div class="user-menu">
           <a href="#" class="btn btn-outline">Sign In</a>
-          <a href="signup.html" class="btn btn-primary">Create Account</a>
+          <a href="./signup.html" class="btn btn-primary">Create Account</a>
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
         document.getElementById('logoutBtn').addEventListener('click', (e) => {
           e.preventDefault();
           localStorage.removeItem('userEmail');
-          window.location.href = '/login.html';
+          window.location.href = './login.html';
         });
       }
     }
@@ -86,7 +86,7 @@
       <button type="submit" class="btn-login">Sign In</button>
     </form>
     <div class="signup-link">
-      Don't have an account? <a href="/signup.html">Create one now</a>
+      Don't have an account? <a href="./signup.html">Create one now</a>
     </div>
   </div>
 </section>
