--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -23,15 +23,15 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="#">Find Hospitals</a></li>
             <li><a href="#">Cost Calculator</a></li>
             <li><a href="#">Resources</a></li>
           </ul>
         </nav>
         <div class="user-menu">
-          <a href="login.html" class="btn btn-outline">Sign In</a>
-          <a href="signup.html" class="btn btn-primary">Create Account</a>
+          <a href="./login.html" class="btn btn-outline">Sign In</a>
+          <a href="./signup.html" class="btn btn-primary">Create Account</a>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <button type="submit" class="btn-signup">Create Account</button>
     </form>
     <div class="login-link">
-      Already have an account? <a href="/login.html">Sign in</a>
+      Already have an account? <a href="./login.html">Sign in</a>
     </div>
   </div>
 </section>
@@ -88,7 +88,7 @@
     const result = await response.json();
     alert(result.message);
     if (response.ok) {
-      window.location.href = '/login.html';
+      window.location.href = './login.html';
     }
   });
 </script>
